@@ -1,16 +1,16 @@
 package eu.europeana.annotation.dereferenciation;
 
-import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.StringWriter;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import javax.xml.transform.Source;
+import javax.ws.rs.core.UriBuilder;
 import javax.xml.transform.Templates;
 import javax.xml.transform.Transformer;
 import javax.xml.transform.TransformerConfigurationException;
@@ -18,8 +18,13 @@ import javax.xml.transform.TransformerException;
 import javax.xml.transform.TransformerFactory;
 import javax.xml.transform.stream.StreamResult;
 import javax.xml.transform.stream.StreamSource;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.stanbol.commons.jsonld.JsonSerializer;
+import org.springframework.beans.factory.InitializingBean;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.annotation.PropertySource;
 import org.springframework.core.io.ClassPathResource;
+import org.springframework.stereotype.Service;
 import eu.europeana.annotation.config.AnnotationConfiguration;
 import eu.europeana.annotation.connection.HttpConnection;
 import eu.europeana.annotation.definitions.exception.AnnotationDereferenciationException;
@@ -30,57 +35,38 @@ import eu.europeana.annotation.definitions.exception.AnnotationDereferenciationE
  * @author GrafR
  *
  */
-public class MetisDereferenciationClient {
+@Service(AnnotationConfiguration.BEAN_METIS_DEREFERENCE_CLIENT)
+@PropertySource(
+    value = {"classpath:config/annotation.properties", "classpath:config/annotation.user.properties"},
+    ignoreResourceNotFound = true)
+public class MetisDereferenciationClient implements InitializingBean {
+    @Value("${metis.baseUrl}")
+    private String baseUrl;  
+    @Value("${metis.connection.retries:3}")
+    private int connRetries;
+    @Value("${metis.connection.timeout:30000}")
+    private int connTimeout;
 
     static final String XSLT_TRANSFORMATION_FILE = "/deref2json.xsl";
     static final String PARAM_URI = "uri";
     static final String PARAM_LANGS = "langs";
     Transformer transformer;
     private HttpConnection httpConnection;
-    private final AnnotationConfiguration configuration;
 
-    public HttpConnection getHttpConnection() {
-	if(httpConnection == null) {
-	    if(configuration != null) {
-		httpConnection = new HttpConnection(
-		    configuration.getMetisConnectionRetries(), 
-		    configuration.getMetisConnectionTimeout());
-	    }else {
-		httpConnection = new HttpConnection();
-	    }
-	}
-	return httpConnection;
-    }
-
-    public void setHttpConnection(HttpConnection httpConnection) {
-	this.httpConnection = httpConnection;
-    }
-
-    public MetisDereferenciationClient(AnnotationConfiguration configuration) {
-      this.configuration = configuration;
-      init();
-    }
-
-    protected void init() {
-	try {
-	    TransformerFactory factory = TransformerFactory.newInstance();
-	    InputStream xslFileAsStream = new ClassPathResource(
-	        XSLT_TRANSFORMATION_FILE).getInputStream();
-	    StreamSource xslSource = new StreamSource(xslFileAsStream);
-	    Templates templates = factory.newTemplates(xslSource);
-	    transformer = templates.newTransformer();
-	} catch (TransformerConfigurationException | IOException e) {
-	    throw new AnnotationDereferenciationException(
-		    "Cannot instantiate XSLT Transformer",
-		    e);
-	}
-    }
-
-    protected Transformer getTransformer() {
-        if(transformer == null) {
-            init();
+    public void afterPropertiesSet() throws Exception {
+      synchronized(this) {
+        if(StringUtils.isBlank(baseUrl)) {
+          throw new AnnotationDereferenciationException(new RuntimeException("Metis baseUrl cannot be null or empty."));
         }
-	return transformer;
+        
+        httpConnection = new HttpConnection(connRetries,connTimeout);
+
+        TransformerFactory factory = TransformerFactory.newInstance();
+      	InputStream xslFileAsStream = new ClassPathResource(XSLT_TRANSFORMATION_FILE).getInputStream();
+      	StreamSource xslSource = new StreamSource(xslFileAsStream);
+      	Templates templates = factory.newTemplates(xslSource);
+      	transformer = templates.newTransformer();
+      }
     }
     
     /**
@@ -90,8 +76,8 @@ public class MetisDereferenciationClient {
      * @return encoded URL
      * @throws UnsupportedEncodingException
      */
-    String encodeUrl(String url) throws UnsupportedEncodingException {
-	return URLEncoder.encode(url, "UTF-8");
+    String encodeUrl(String url) {
+	return URLEncoder.encode(url, StandardCharsets.UTF_8);
     }
 
     /**
@@ -99,7 +85,6 @@ public class MetisDereferenciationClient {
      * list and fills the map with the URI and JSON string. It sends GET HTTP
      * request to dereference URI.
      * 
-     * @param baseUrl  The Metis base URL.
      * @param uris     The list of query URIs. The URI is composed from the base URI
      *                 to Metis API completed with query URI from the entity.
      * @param language e.g.
@@ -107,16 +92,16 @@ public class MetisDereferenciationClient {
      * @return response from Metis API in JSON-LD format
      * @throws AnnotationDereferenciationException
      */
-    public synchronized Map<String, String> dereferenceOne(String baseUrl, String uri, String language) throws AnnotationDereferenciationException {
+    public Map<String, String> dereferenceOne(String uri, String language) throws AnnotationDereferenciationException {
 	Map<String, String> res = new HashMap<String, String>();
-	String queryUri, xmlResponse, jsonLdStr;
+	String jsonLdStr;
+	InputStream streamResponse;
 	    
 	try {
-	    queryUri = baseUrl + "?uri=" + URLEncoder.encode(uri, "UTF-8");		
-	    xmlResponse = getHttpConnection().getURLContent(queryUri);
-	    jsonLdStr = convertToJsonLd(uri, xmlResponse, language).toString();
-	    res.put(uri, jsonLdStr);
-	    
+	    UriBuilder uriBuilder = UriBuilder.fromPath(baseUrl).queryParam(PARAM_URI, uri);
+        streamResponse = httpConnection.getURLContent(uriBuilder.build().toString());
+	    jsonLdStr = convertToJsonLd(uri, streamResponse, language).toString();
+	    res.put(uri, jsonLdStr);	    
 	} catch (IOException ex) {
 	    throw new AnnotationDereferenciationException(ex);
 	} catch (RuntimeException ex) {
@@ -130,7 +115,6 @@ public class MetisDereferenciationClient {
      * list and fills the map with the URI and JSON string. It sends GET HTTP
      * request to dereference URI.
      * 
-     * @param baseUrl  The Metis base URL.
      * @param uris     The list of query URIs. The URI is composed from the base URI
      *                 to Metis API completed with query URI from the entity.
      * @param language e.g.
@@ -138,17 +122,27 @@ public class MetisDereferenciationClient {
      * @return response from Metis API in JSON-LD format
      * @throws AnnotationDereferenciationException
      */
-    public synchronized Map<String, String> dereferenceMany(String baseUrl, List<String> uris, String language) throws AnnotationDereferenciationException {
+    public Map<String, String> dereferenceMany(List<String> uris, String language) throws AnnotationDereferenciationException {
 	Map<String, String> res = new HashMap<String, String>();
-	String xmlResponse, jsonLdStr;
+	String jsonLdStr;
+	InputStream streamResponse;
 	try {
-        	@SuppressWarnings({ "rawtypes", "unchecked" })
-		String urisJson = JsonSerializer.toString((List)uris);
-	        xmlResponse = getHttpConnection().postRequest(baseUrl, urisJson);
-	        for (Object uri : uris) {
-	            jsonLdStr = convertToJsonLd((String)uri, xmlResponse, language).toString();
-        	    res.put((String)uri, jsonLdStr);
-         	}
+      	@SuppressWarnings({ "rawtypes", "unchecked" })
+      	String urisJson = JsonSerializer.toString((List)uris);
+      	streamResponse = httpConnection.postRequest(baseUrl, urisJson);
+      	String[] urisArray = new String[uris.size()];
+        urisArray = uris.toArray(urisArray);
+        jsonLdStr = convertToJsonLd(urisArray, streamResponse, language).toString();
+        //we need to separate the individual jsons manually
+        List<Integer> startingPositions = findSubstringIndexes(jsonLdStr, "{ \"@context\":");
+        for (int i = 0; i < startingPositions.size(); i++) {
+          if(i==startingPositions.size()-1) {
+            res.put(uris.get(i), jsonLdStr.substring(startingPositions.get(i), jsonLdStr.length()));
+          }
+          else {
+            res.put(uris.get(i), jsonLdStr.substring(startingPositions.get(i), startingPositions.get(i+1)));
+          }
+        }          
 	}catch(IOException ex) {
 	    throw new AnnotationDereferenciationException(ex);
 	}catch(RuntimeException ex) {
@@ -156,30 +150,52 @@ public class MetisDereferenciationClient {
 	}
 	return res;
     }
-
+    
+    /**
+     * This method need to be moved to utils.
+     * 
+     * This method finds all indexes of a substring within a string, e.g. for the substring "abc" 
+     * within a string "abcdefabc abc dejjabc", the output will be [0,6,10,18].
+     * @param input
+     * @param substring
+     * @return
+     */
+    private List<Integer> findSubstringIndexes(String input, String substring) {
+      List<Integer> indexes = new ArrayList<>();
+      int substringLength = substring.length();
+      int index = input.indexOf(substring, 0);
+      if(index!=-1) {
+        indexes.add(index);
+        while(index != -1){
+          index = input.indexOf(substring, index + substringLength);
+          if (index != -1) {
+              indexes.add(index);
+          }
+        }
+      }      
+      return indexes;
+    }
   
     /**
      * An XSLT converts dereference output to JSON-LD.
      * 
-     * @param xmlStr
+     * @param response
      * @param language e.g.
      *                 "en,pl,de,nl,fr,it,da,sv,el,fi,hu,cs,sl,et,pt,es,lt,lv,bg,ro,sk,hr,ga,mt,no,ca,ru"
      * @return dereferenced output in JSON-LD format
      */
-    public synchronized StringWriter convertToJsonLd(String uri, String xmlStr, String language) {
+    public StringWriter convertToJsonLd(Object uris, InputStream response, String language) {
 
 	StringWriter result = new StringWriter();
 	try {
 	    //reuse transformer but update params
-	    getTransformer().clearParameters();
-	    getTransformer().setParameter(PARAM_URI, uri);
+	    transformer.clearParameters();
+	    transformer.setParameter(PARAM_URI, uris);
 	    if (language != null) {
-		getTransformer().setParameter(PARAM_LANGS, language);
+	      transformer.setParameter(PARAM_LANGS, language);
 	    }
-	    InputStream inputStringStream = new ByteArrayInputStream(xmlStr.getBytes(StandardCharsets.UTF_8));
-	    Source text = new StreamSource(inputStringStream);
-	    getTransformer().transform(text, new StreamResult(result));
-	    
+	    StreamSource text = new StreamSource(response);
+	    transformer.transform(text, new StreamResult(result));
 	} catch (TransformerConfigurationException e) {
 	    throw new AnnotationDereferenciationException(
 		    "Unexpected exception occured when invoking the MetisDereferenciationClient convertDereferenceOutputToJsonLd method",
@@ -191,4 +207,5 @@ public class MetisDereferenciationClient {
 	}
 	return result;
     }
+
 }
